# quasar

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml  Readme.md
cli/src/: build.rs  cfg.rs  clean.rs  client.rs  config.rs  deploy.rs  dump.rs  idl.rs  init.rs  keys.rs  lib.rs  lint.rs  new.rs  style.rs  test.rs  toolchain.rs
cli/src/init/: scaffold.rs  schema.rs  templates.rs
cli/tests/: generated_clients_smoke.rs  lint_cli.rs
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/src/: client.rs  context.rs  event.rs  lib.rs  macros.rs  pda.rs  prelude.rs  traits.rs
core/src/accounts/: account.rs  rent.rs
core/src/cpi/: mod.rs  system.rs
core/tests/: miri.rs
core/tests/compile_fail/: instruction_vec_alignment.rs
derive/: Cargo.toml
derive/src/: account.rs  accounts.rs  client_macro.rs  declare_program.rs  error_code.rs  event.rs  helpers.rs  instruction.rs  lib.rs  program.rs  seed_param.rs  seeds.rs  serialize.rs
derive/src/account/: accessors.rs  dynamic.rs  fixed.rs  layout.rs  methods.rs  mod.rs  one_of.rs  seeds.rs  traits.rs
derive/src/accounts/: client.rs  composition.rs  field_kind.rs  fields.rs  fields_process.rs  init.rs  mod.rs  plan.rs
derive/tests/compile_pass/: ata_init_without_rent.rs  derive_seeds.rs  init_interface_account_typed_seed.rs  init_token_params.rs  pre_associated_token_init.rs
docs/: cli.md  cpi-optimization-report.md
docs/superpowers/plans/: 2026-03-29-derive-accounts-streamline.md  2026-03-29-test-suite-rewrite.md  2026-03-30-macro-rewrite.md
docs/superpowers/specs/: 2026-03-29-cross-instruction-optimization-design.md  2026-03-30-macro-transparency-design.md
examples/escrow/: Cargo.toml
examples/escrow/src/: events.rs  lib.rs  state.rs  tests.rs
examples/multisig/: Cargo.toml
examples/multisig/src/: client.rs  tests.rs
examples/upstream-vault/: Cargo.toml
examples/upstream-vault/.cargo/: config.toml
examples/vault/: Cargo.toml
examples/vault/src/instructions/: deposit.rs
idl/: Cargo.toml
idl/schema/: Cargo.toml
idl/schema/src/: account.rs  canonical.rs  codec.rs  constant.rs  error.rs  event.rs  instruction.rs  layout.rs  lib.rs  root.rs  space.rs  types.rs  wrapper.rs
idl/src/: codegen_ts.rs  lib.rs  types.rs
idl/src/codegen/: c.rs  golang.rs  mod.rs  model.rs  python.rs  rust.rs  typescript.rs
idl/src/lint/: constraints.rs  mod.rs  report.rs  rules.rs  surface.rs
idl/src/parser/: helpers.rs  state.rs
idl/tests/: lint.rs  lint_surface.rs  parser.rs
lang/: Cargo.toml
lang/src/: account_behavior.rs  account_init.rs  address.rs  client.rs  context.rs  entrypoint.rs  error.rs  idl_build.rs  instruction_arg.rs  instruction_data.rs  lib.rs  macros.rs  pda.rs  prelude.rs  remaining.rs  traits.rs
lang/src/accounts/: account.rs  interface.rs  interface_account.rs  migration.rs  program.rs  signer.rs  system_account.rs  sysvar.rs  unchecked.rs
lang/src/checks/: data_len.rs  discriminator.rs  zeropod.rs
lang/src/cpi/: buf.rs  dyn_cpi.rs  mod.rs  system.rs
lang/src/ops/: close_program.rs  init.rs  mod.rs  pda.rs  realloc.rs
lang/src/sysvars/: mod.rs  rent.rs
lang/tests/: auto_instruction_discriminator.rs  instruction_arg.rs  miri.rs
lang/tests/compile_fail/: account_allow_removed.rs  account_allow_removed.stderr  auto_instruction_multibyte_mix.rs  auto_instruction_multibyte_mix.stderr  dup_close_unsound.rs  dup_close_unsound.stderr  instruction_raw_pre_hook.stderr  migrate_on_signer.stderr  migration_requires_payer.stderr  pod_string_invalid_pfx.stderr  pod_string_n_exceeds_pfx.stderr  pod_vec_n_exceeds_pfx.stderr  realloc_bad_signer.stderr  realloc_bad_unchecked.stderr  sweep_before_close_ordering.rs  sweep_before_close_ordering.stderr
lang/tests/compile_pass/: account_dynamic_set_inner_rent_access.rs
metadata/src/: account_init.rs
metadata/tests/compile_fail/: init_master_edition_without_behavior.stderr  init_without_behavior.stderr
pod/: Cargo.toml
pod/src/: lib.rs  string.rs  vec.rs
profile/: Cargo.toml  Readme.md
profile/src/: aggregate.rs  dwarf.rs  elf.rs  lib.rs  main.rs  output.rs  serve.rs  walk.rs
quasar/: Cargo.toml
quasar/src/: lib.rs
schema/: Cargo.toml
schema/src/: lib.rs
scripts/: bench-tracked-programs.sh  perf-baselines.env
spl/src/: close.rs  constants.rs  exit.rs  init.rs  lib.rs  token.rs  token_2022.rs  validate.rs
spl/src/accounts/: associated_token.rs  token.rs  token_close.rs  token_sweep.rs
spl/src/associated_token/: mod.rs
spl/src/instructions/: approve.rs  burn.rs  initialize_account.rs  initialize_mint.rs  mint_to.rs  mod.rs  transfer.rs  transfer_checked.rs
spl/src/metadata/: init.rs
spl/tests/: miri.rs
tests/programs/test-heap/: Cargo.toml
tests/programs/test-heap/src/: lib.rs
tests/programs/test-heap/src/instructions/: heap_vec_ok.rs  no_heap_alloc_attempt.rs
tests/programs/test-misc/: Cargo.toml
tests/programs/test-misc/src/: lib.rs  state.rs
tests/programs/test-misc/src/instructions/: assign_test.rs  close_account.rs  cpi_invoke_ignore_return.rs  create_account_test.rs  explicit_payer.rs  init_if_needed.rs  initialize.rs  mut_check.rs  no_disc_check.rs  realloc_check.rs  remaining_accounts_check.rs  signer_and_mut_check.rs  space_override.rs  transfer_test.rs
zeropod/: Cargo.toml
zeropod-derive/src/: compact.rs  fixed.rs
zeropod/src/: error.rs  traits.rs
zeropod/tests/: fixed_enum.rs  validation.rs
(+134 files in other folders)
