[package]
name = "quasar-client"
description = "Client-side code generation helpers for Quasar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
quasar-schema = { path = "../schema" }
