[package]
name = "quasar-lang"
description = "Zero-copy Solana program framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
debug = []
idl-build = ["dep:inventory", "dep:quasar-idl-schema", "dep:serde_json", "dep:bs58"]

[dependencies]
quasar-derive = { version = "0.0", path = "../derive" }
inventory = { version = "0.3", optional = true }
quasar-idl-schema = { path = "../idl/schema", optional = true }
serde_json = { version = "1", optional = true }
bs58 = { version = "0.5", optional = true }
zeropod = { version = "0.2.0", features = ["solana-address", "solana-program-error"] }
const-crypto = "0.3.0"
solana-program-error = "3.0.0"
solana-account-view = "2.0.0"
solana-address = { version = ">=2.2, <2.6", features = ["wincode", "decode", "copy"] }
solana-instruction-view = { version = "=2.0.0", features = ["cpi"] }
solana-program-log = "1.0.0"

[target.'cfg(any(target_os = "solana", target_arch = "bpf"))'.dependencies]
solana-define-syscall = { version = "5.0.0", features = [
    "unstable-static-syscalls",
] }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
zeropod = { version = "0.2.0", features = ["wincode", "solana-address", "solana-program-error"] }
solana-instruction = "3.2.0"
wincode = { version = "0.4", features = ["derive"] }

[dev-dependencies]
trybuild = "1"
