[package]
name = "quasar-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
alloc = []
client = []
debug = []
idl-build = ["quasar-lang/idl-build"]

[dependencies]
quasar-lang = { path = "../../lang" }

[dev-dependencies]
quasar-vault-client = { path = "client" }
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
