[package]
name = "quasar-test-heap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
default = ["alloc"]
client = []
debug = []
alloc = []
idl-build = ["quasar-lang/idl-build"]

[dependencies]
quasar-lang = { path = "../../../lang" }

[dev-dependencies]
