[package]
name = "quasar-test-misc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
client = []
debug = []
alloc = []
idl-build = ["quasar-lang/idl-build"]

[dependencies]
quasar-lang = { path = "../../../lang" }
quasar-derive = { path = "../../../derive" }
quasar-spl = { path = "../../../spl" }

[dev-dependencies]
